# Data-Analytics-United-Kingdom-

./: Classes.pbix  README.md  data.pbix  dax.pbix
PowerBI/Charts Data/: DAX - Tech_Products_Sales_Data.xlsx  Data for New Slicer.xlsx  Gauge_Chart_Data.xlsx  Mobile Sales Data.xlsx  Scatter_Chart_Data.xlsx  Vehicle Product Sales Data.xlsx
PowerBI/Orders Data/: Other_Details.xlsx
PowerBI/Orders Data/Orders Data/: April_23.xlsx  February_23.xlsx  January_23.xlsx  March_2023.xlsx
SQL DATA/: SEC_FILE.sql  first class.sql
SQL DATA/ALL SQL Files/: Day – 12 – SQL –Import CSV File into SQL Database.sql  Day – 24 – SQL – Conditional Functions in SQL .sql
SQL DATA/All Excel Practice Files/: employee_data with error.csv
class 10/: addition.py  app.py  main.ipynb  multiplication.py
class_01/: class_01.py  main.ipynb
class_02/: notebook.ipynb
class_03/: main.ipynb
class_04/: main.ipynb
class_13/: data.txt  main.ipynb  new.txt  new_data.txt
class_14/: logintime.txt  main.ipynb
matplotlib/: abc.py  main.ipynb
numpy/: README.md  class01.ipynb  class02.ipynb  main.py  pyproject.toml
oop_class/: main.ipynb
pandas/: pyproject.toml
pandas/src/pandas/: __init__.py  main.py  pandas.ipynb
pd/: class02.ipynb  data.csv  employee_data.xlsx  main.ipynb  multiple_sheets.xlsx  new_data.csv  new_sales.xlsx  sales.xlsx  students_data.xlsx
