[project]
name = "pandas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
pandas = "pandas:main"
main = "pandas.main:main"
abc = "pandas.pandas:pd"


[build-system]
requires = ["uv_build>=0.8.20,<0.9.0"]
build-backend = "uv_build"
